--- a/src/poiupv/vistes/IniciSesio.fxml
+++ b/src/poiupv/vistes/IniciSesio.fxml
@@ -5,19 +5,17 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane focusTraversable="true" prefHeight="400.0" prefWidth="402.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
-   <children>
-      <HBox alignment="CENTER_LEFT" layoutY="14.0" prefHeight="59.0" prefWidth="600.0" style="-fx-background-color: #006db5;" AnchorPane.bottomAnchor="327.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
+<BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
+   <top>
+      <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="599.0" style="-fx-background-color: #006db5;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Inicio Sesión" wrappingWidth="281.13934326171875">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Inici Sesió" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="44.0" />
                </font>
@@ -26,31 +24,65 @@
                </HBox.margin>
             </Text>
          </children>
+         <BorderPane.margin>
+            <Insets top="15.0" />
+         </BorderPane.margin>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </HBox>
-      <Pane layoutX="75.0" layoutY="94.0" prefHeight="266.0" prefWidth="251.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="39.80000000000001" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.80000000000001" AnchorPane.topAnchor="94.0">
+   </top>
+   <center>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="MissatgeUsuari" layoutX="48.0" layoutY="58.0" text="Usuario incorrecto" textFill="RED" visible="false" />
-            <Label fx:id="MissatgeContrasenya" layoutX="49.0" layoutY="117.0" text="Contraseña incorrecta" textFill="RED" visible="false" />
-            <TextField fx:id="usuari" layoutX="48.0" layoutY="33.0" promptText="Usuario o nickname" />
-            <Button fx:id="iniciarSessio" layoutX="49.0" layoutY="154.0" mnemonicParsing="false" onAction="#iniciarSesio" prefHeight="32.0" prefWidth="149.0" style="-fx-background-color: #1877f2;" text="Entrar" textAlignment="CENTER" textFill="WHITE">
+            <TextField fx:id="usuari" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="220.0" promptText="Usuario o nickname" snapToPixel="false">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font size="14.0" />
+               </font></TextField>
+            <HBox alignment="CENTER_LEFT" prefHeight="5.0" prefWidth="273.0">
+               <children>
+                  <Label fx:id="MissatgeUsuari" text="Usuario incorrecto" textFill="RED" visible="false" HBox.hgrow="ALWAYS">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Label>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </HBox>
+            <PasswordField fx:id="contrassenya" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="220.0" promptText="Contrassenya">
+               <font>
+                  <Font size="14.0" />
+               </font></PasswordField>
+            <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="295.0">
+               <children>
+                  <Label fx:id="MissatgeContrasenya" text="Contraseña incorrecta" textFill="RED" visible="false" HBox.hgrow="ALWAYS">
+                     <padding>
+                        <Insets bottom="20.0" />
+                     </padding>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Button fx:id="iniciarSessio" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#iniciarSesio" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #1877f2;" text="Entrar" textFill="WHITE" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <PasswordField fx:id="contrassenya" layoutX="48.0" layoutY="92.0" promptText="Contraseña" />
-            <Button fx:id="botoRegistre" layoutX="49.0" layoutY="201.0" mnemonicParsing="false" onAction="#Registrarse" prefHeight="32.0" prefWidth="149.0" style="-fx-background-color: #00a400;" text="Crear cuenta" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="botoRegistre" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#Registrarse" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #00a400;" text="Crear Cuenta" textFill="WHITE" VBox.vgrow="ALWAYS">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Button>
          </children>
-         <effect>
-            <DropShadow blurType="GAUSSIAN">
-               <color>
-                  <Color red="0.6052631735801697" green="0.5847141146659851" blue="0.5847141146659851" />
-               </color>
-            </DropShadow>
-         </effect>
-      </Pane>
-   </children>
-</AnchorPane>
+         <BorderPane.margin>
+            <Insets left="200.0" right="200.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
+</BorderPane>
