--- a/src/poiupv/vistes/Principal.fxml
+++ b/src/poiupv/vistes/Principal.fxml
@@ -4,9 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
@@ -17,89 +14,61 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="714.0" prefWidth="1058.0" stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
+<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.PrincipalController">
    <children>
-      <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="5.0" VBox.vgrow="NEVER">
-         <children>
-            <MenuBar cache="true" prefHeight="22.0" prefWidth="304.0">
-              <menus>
-                <Menu mnemonicParsing="false" text="Archivo">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Lista problemas" />
-                        <MenuItem mnemonicParsing="false" text="Problema aleatorio" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Cuenta">
-                  <items>
-                        <MenuItem mnemonicParsing="false" onAction="#resultados" text="Resultados" />
-                    <MenuItem mnemonicParsing="false" onAction="#modificarPerfil" text="Modificar Perfil" />
-                        <MenuItem mnemonicParsing="false" onAction="#cerrarSesion" text="Cerrar Sesión" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Ayuda">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#acercaDe" text="Acerca de" />
-                  </items>
-                </Menu>
-              </menus>
-               <opaqueInsets>
-                  <Insets right="10.0" />
-               </opaqueInsets>
-               <HBox.margin>
-                  <Insets right="50.0" />
-               </HBox.margin>
-            </MenuBar>
-            <ImageView fx:id="avatarPerfil" fitHeight="29.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <HBox.margin>
-                  <Insets left="330.0" />
-               </HBox.margin>
-               <image>
-                  <Image url="@../../resources/avatars/default.png" />
-               </image>
-            </ImageView>
-         </children>
-         <VBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </VBox.margin>
-      </HBox>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="625.0" prefWidth="1058.0">
         <items>
-            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="1046.0">
+            <HBox alignment="CENTER" prefHeight="262.0" prefWidth="1042.0">
                <children>
-                  <HBox prefHeight="262.0" prefWidth="1042.0">
+                  <VBox alignment="CENTER_LEFT" prefHeight="262.0" prefWidth="955.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <VBox prefHeight="262.0" prefWidth="955.0">
-                           <children>
-                              <Label fx:id="problema" prefHeight="116.0" prefWidth="954.0" text="Label" wrapText="true">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font></Label>
-                              <ListView fx:id="llistaRespostes" prefHeight="101.0" prefWidth="955.0" />
-                              <Label fx:id="correctaIncorrecta" text="Label" visible="false" />
-                           </children>
-                        </VBox>
-                        <Button fx:id="validarResposta" mnemonicParsing="false" onAction="#respostaCorrecta" prefHeight="30.0" prefWidth="84.0" text="Validar">
-                           <HBox.margin>
-                              <Insets right="20.0" top="115.0" />
-                           </HBox.margin></Button>
+                        <Label fx:id="problema" text="label" wrapText="true">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ListView fx:id="llistaRespostes" prefHeight="101.0" prefWidth="955.0">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </ListView>
+                        <Label fx:id="correctaIncorrecta" text="Label" visible="false">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </Label>
                      </children>
-                  </HBox>
+                     <HBox.margin>
+                        <Insets right="15.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <Button fx:id="validarResposta" alignment="CENTER" ellipsisString="Validar" mnemonicParsing="false" onAction="#respostaCorrecta" text="Validar" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
                </children>
-            </Pane>
+               <padding>
+                  <Insets left="20.0" right="20.0" />
+               </padding>
+            </HBox>
             <SplitPane dividerPositions="0.13957934990439771" orientation="VERTICAL" prefHeight="370.0" prefWidth="1058.0">
               <items>
                   <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="1058.0">
                      <children>
-                        <Button mnemonicParsing="false" />
-                        <Button mnemonicParsing="false" text="Transportador" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Barra de herramientas" />
                      </children>
                   </HBox>
-                  <ScrollPane fx:id="map_scrollpane" maxHeight="-Infinity" maxWidth="-Infinity" onMouseMoved="#muestraPosicion" prefHeight="306.0" prefWidth="1058.0">
+                  <ScrollPane fx:id="map_scrollpane" onMouseMoved="#muestraPosicion">
                      <content>
                         <Pane focusTraversable="true">
                            <children>
-                              <ImageView fx:id="cartaNautica" fitHeight="241.0" fitWidth="1054.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="cartaNautica" fitHeight="1500.0" fitWidth="1500.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../resources/carta_nautica.jpg" />
                                  </image>
@@ -114,7 +83,7 @@
       </SplitPane>
       <HBox alignment="CENTER_RIGHT">
          <children>
-            <Label fx:id="posicion" minHeight="-Infinity" minWidth="-Infinity" text="SceneX:     ScenY:     " wrapText="true" HBox.hgrow="ALWAYS" />
+            <Label fx:id="posicion" text="SceneX:     ScenY:     " wrapText="true" HBox.hgrow="ALWAYS" />
             <Region prefHeight="0.0" prefWidth="45.0" />
             <Label text="Zoom">
                <opaqueInsets>
@@ -123,7 +92,7 @@
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin></Label>
-            <Button mnemonicParsing="false" onAction="#zoomOut" text="-">
+            <Button ellipsisString="-" mnemonicParsing="false" onAction="#zoomOut" text="-">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin></Button>
@@ -131,10 +100,10 @@
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin></Slider>
-            <Button mnemonicParsing="false" onAction="#zoomIn" text="+" />
+            <Button ellipsisString="+" mnemonicParsing="false" onAction="#zoomIn" text="+" />
          </children>
          <VBox.margin>
-            <Insets bottom="12.0" right="12.0" top="6.0" />
+            <Insets bottom="12.0" left="12.0" right="12.0" top="6.0" />
          </VBox.margin>
       </HBox>
    </children>
