--- a/src/poiupv/vistes/resultats.fxml
+++ b/src/poiupv/vistes/resultats.fxml
@@ -12,15 +12,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="469.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ResultatsController">
+<AnchorPane id="AnchorPane" prefHeight="469.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ResultatsController">
    <children>
-      <Pane layoutX="29.0" layoutY="83.0" prefHeight="352.0" prefWidth="577.0" style="-fx-background-color: white;">
+      <Pane layoutX="29.0" layoutY="83.0" prefHeight="352.0" prefWidth="682.0" style="-fx-background-color: white;">
          <children>
             <HBox prefHeight="352.0" prefWidth="578.0">
                <children>
                   <ListView fx:id="listSesions" prefHeight="352.0" prefWidth="572.0" />
-                  <VBox prefHeight="272.0" prefWidth="491.0">
+                  <VBox prefHeight="352.0" prefWidth="289.0">
                      <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total:">
+                           <font>
+                              <Font name="System Bold Italic" size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="30.0" top="10.0" />
+                           </VBox.margin>
+                        </Text>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Encerts:">
@@ -90,7 +98,7 @@
             <DropShadow />
          </effect>
       </Pane>
-      <HBox layoutY="-7.0" prefHeight="70.0" prefWidth="642.0" style="-fx-background-color: #006db5;">
+      <HBox layoutY="-7.0" prefHeight="70.0" prefWidth="745.0" style="-fx-background-color: #006db5;">
          <children>
             <Text fill="WHITE" nodeOrientation="RIGHT_TO_LEFT" strokeType="OUTSIDE" strokeWidth="0.0" text="Resultats">
                <font>
