--- a/src/resources/estilos.css
+++ b/src/resources/estilos.css
@@ -1,34 +1,4 @@
-/*
- * Copyright (c) 2014, Oracle and/or its affiliates.
- * All rights reserved. Use is subject to license terms.
- *
- * This file is available and licensed under the following license:
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- *
- *  - Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- *  - Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in
- *    the documentation and/or other materials provided with the distribution.
- *  - Neither the name of Oracle Corporation nor the names of its
- *    contributors may be used to endorse or promote products derived
- *    from this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
- * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
- * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
- * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
- * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- */
+
 
 /*******************************************************************************
  *                                                                             *
@@ -70,30 +40,7 @@ S17.642,20.762,13.558,20.762z";
     -fx-background-color: -app-color-lo, -app-color-hi;
 }
 
-/*------------------ button, toggle buttons ------------------ */
 
-.contrast .button,
-.contrast .toggle-button {
-    -fx-text-fill: -app-color-hi;
-    -fx-background-color: -app-color-hi, -app-color-lo;
-    -fx-background-insets: 0, 2;
-    -fx-background-radius: 2, 1;
-}
-.contrast .toggle-button:selected {
-    -fx-background-color: -app-color-hi, -app-hover;
-}
-.contrast .button:hover,
-.contrast .toggle-button:hover {
-    -fx-background-color: -app-color-hi, -app-hover;
-}
-.contrast .toggle-button.left-pill {
-    -fx-background-insets: 0, 2 1 2 2;
-    -fx-background-radius: 2 0 0 2, 1 0 0 1;
-}
-.contrast .toggle-button.right-pill {
-    -fx-background-insets: 0, 2 2 2 1;
-    -fx-background-radius: 0 2 2 0, 0 1 1 0;
-}
 
 /*-------------------------- labels -------------------------- */
 
@@ -171,4 +118,22 @@ S17.642,20.762,13.558,20.762z";
 }
 .contrast .split-pane > .split-pane-divider {
     -fx-background-color: -app-color-lo;
+}
+
+/*------------------------ BorderPane ------------------------- */
+.border-pane{
+    -fx-background-color: white;
+}
+.border-pane .button {
+    -fx-text-fill: white;
+    -fx-font-weight: bold; 
+    -fx-font-size: 20px; 
+    -fx-background-color: #1877f2;
+    
+}
+.BorderPane.h.hbox{
+    -fx-font-weight: bold; 
+    -fx-text-fill: white;
+    -fx-font-size: 44px; 
+    -fx-background-color: #1877f2;
 }
