--- a/src/poiupv/vistes/IniciSesio.fxml
+++ b/src/poiupv/vistes/IniciSesio.fxml
@@ -66,7 +66,7 @@
                   </Label>
                </children>
             </HBox>
-            <Button fx:id="iniciarSessio" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#iniciarSesio" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #1877f2;" text="Entrar" textFill="WHITE" VBox.vgrow="ALWAYS">
+            <Button fx:id="iniciarSessio" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#iniciarSesio" prefHeight="50.0" prefWidth="160.0" style="-fx-background-color: #1877f2;" text="Entrar" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
@@ -74,7 +74,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="botoRegistre" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#Registrarse" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #00a400;" text="Crear Cuenta" textFill="WHITE" VBox.vgrow="ALWAYS">
+            <Button fx:id="botoRegistre" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#Registrarse" prefHeight="50.0" prefWidth="160.0" style="-fx-background-color: #00a400;" text="Crear Cuenta" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
