--- a/src/poiupv/vistes/IniciSesio.fxml
+++ b/src/poiupv/vistes/IniciSesio.fxml
@@ -13,19 +13,19 @@
 
 <BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.IniciSesioController">
    <top>
-      <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="599.0" style="-fx-background-color: #006db5;" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_LEFT" style="-fx-background-color: #006db5;" BorderPane.alignment="CENTER_LEFT">
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Inici Sesió" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="44.0" />
                </font>
                <HBox.margin>
-                  <Insets left="10.0" />
+                  <Insets bottom="10.0" left="10.0" top="10.0" />
                </HBox.margin>
             </Text>
          </children>
          <BorderPane.margin>
-            <Insets top="15.0" />
+            <Insets />
          </BorderPane.margin>
          <opaqueInsets>
             <Insets />
@@ -81,7 +81,7 @@
             </Button>
          </children>
          <BorderPane.margin>
-            <Insets left="200.0" right="200.0" />
+            <Insets bottom="30.0" left="200.0" right="200.0" top="30.0" />
          </BorderPane.margin>
       </VBox>
    </center>
